--- a/ptthalo/halo15.html
+++ b/ptthalo/halo15.html
@@ -7,6 +7,7 @@
 
     <title>Hálózatok I.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,21 +41,77 @@
         <h1>Dinamikus címkiosztás IPv4-környezetben (8+18 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megismerkedjenek a dinamikus címkiosztással IPv4- környezetben. A tanulók legyenek képesek DHCPv4-kiszolgáló konfigurálására forgalomirányítón. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Ismeri a dinamikus címigénylés lehetőségeit IPv4-környezetben.</li>
-          <li>Ismeri a DHCPv4-protokoll működését, az általa használt üzeneteket (DHCPDISCOVER, DHCPOFFER, DHCPREQUEST, DHCPACK, DHCPNAK). Képes a DHCP által használt üzenetek jellemzésére.</li>
-          <li>Adatforgalom elfogására használt szoftverrel vagy szimulációs szoftverrel képes a DHCP-folyamat üzeneteit megjeleníteni és azokat értelmezni. Képes a DHCP-folyamat végigkövetésére, adatforgalom elfogására alkalmas szoftver használatával.</li>
-          <li>Képes forgalomirányítón DHCP-szolgáltatás engedélyezésére és tiltására. Képes forgalomirányítón DHCP-hatókör konfigurálására, mely a legszükségesebb elemeket tartalmazza (kiosztható hálózat, alapértelmezett átjáró, DNS-kiszolgáló, kiosztásból kizárt címek).</li>
-          <li>Képes forgalomirányítón DHCP-fenntartás konfigurálására és a bérleti idő beállítására.</li>
-          <li>Képes forgalomirányítón DHCP-közvetítő használatára.</li>
-          <li>Képes végberendezéseken és hálózati eszközökön DHCP-protokoll használatával dinamikus címigénylés beállítására.</li>
-          <li>Képes DHCPv4 esetén hibafelderítést és hibaelhárítást végezni.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a dinamikus címigénylés lehetőségeit IPv4-környezetben.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a DHCPv4-protokoll működését, az általa használt üzeneteket (DHCPDISCOVER, DHCPOFFER, DHCPREQUEST, DHCPACK, DHCPNAK). Képes a DHCP által használt üzenetek jellemzésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Adatforgalom elfogására használt szoftverrel vagy szimulációs szoftverrel képes a DHCP-folyamat üzeneteit megjeleníteni és azokat értelmezni. Képes a DHCP-folyamat végigkövetésére, adatforgalom elfogására alkalmas szoftver használatával.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes forgalomirányítón DHCP-szolgáltatás engedélyezésére és tiltására. Képes forgalomirányítón DHCP-hatókör konfigurálására, mely a legszükségesebb elemeket tartalmazza (kiosztható hálózat, alapértelmezett átjáró, DNS-kiszolgáló, kiosztásból kizárt címek).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes forgalomirányítón DHCP-fenntartás konfigurálására és a bérleti idő beállítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes forgalomirányítón DHCP-közvetítő használatára.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes végberendezéseken és hálózati eszközökön DHCP-protokoll használatával dinamikus címigénylés beállítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes DHCPv4 esetén hibafelderítést és hibaelhárítást végezni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
