--- a/ptthalo/halo17.html
+++ b/ptthalo/halo17.html
@@ -7,6 +7,7 @@
 
     <title>Hálózatok I.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,21 +41,77 @@
         <h1>Harmadik rétegbeli redundancia (6+35 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók felismerjék a harmadik rétegben a redundancia szükségességét, és tisztában legyenek a redundancia okozta problémákkal. A tanulók tudjanak harmadik rétegbeli redundanciát tervezni, és megvalósítani FHRP protokoll konfigurálásával. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Tisztában van a harmadik rétegbeli redundancia szükségességével és megvalósításának lehetőségeivel.</li>
-          <li>Képes harmadik rétegbeli redundanciát tartalmazó hálózat tervezésére.</li>
-          <li>Ismeri a First Hop Redundancy Protocols (FHRP) általános működési elvét.</li>
-          <li>Érti a virtuális router, a virtuális IP-cím és a virtuális MAC-cím jelentőségét, megfelelően tudja használni a virtuális IP-címet.</li>
-          <li>Tisztában van legalább egy FHRP-protokoll működésével (Virtual Router Redundancy Protocol [VRRP], Hot Standby Router Protocol [HSRP], Gateway Load Balancing Protocol [GLBP]).</li>
-          <li>Képes az általa tanult FHRP-protokoll hatékony működésének konfigurálására.</li>
-          <li>Képes az általa tanult FHRP-protokoll beállításainak, valamint a forgalomirányító protokollbeli aktuális szerepének a megjelenítésére.</li>
-          <li>Felismeri az általa tanult FHRP-protokoll konfigurációs hibáit, és képes azok elhárítására.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a harmadik rétegbeli redundancia szükségességével és megvalósításának lehetőségeivel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes harmadik rétegbeli redundanciát tartalmazó hálózat tervezésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a First Hop Redundancy Protocols (FHRP) általános működési elvét.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Érti a virtuális router, a virtuális IP-cím és a virtuális MAC-cím jelentőségét, megfelelően tudja használni a virtuális IP-címet.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van legalább egy FHRP-protokoll működésével (Virtual Router Redundancy Protocol [VRRP], Hot Standby Router Protocol [HSRP], Gateway Load Balancing Protocol [GLBP]).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes az általa tanult FHRP-protokoll hatékony működésének konfigurálására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes az általa tanult FHRP-protokoll beállításainak, valamint a forgalomirányító protokollbeli aktuális szerepének a megjelenítésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Felismeri az általa tanult FHRP-protokoll konfigurációs hibáit, és képes azok elhárítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
