--- a/ptthalo/halo19.html
+++ b/ptthalo/halo19.html
@@ -7,6 +7,7 @@
 
     <title>Hálózatok I.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,30 +41,149 @@
         <h1>Vezeték nélküli technológiák (10+27 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék a vezeték nélküli szabványokat, a WLAN topológiákat és a WLAN-ok működését. A tanulók legyenek képesek vezeték nélküli hálózat kialakítására kis- és nagyvállalati környezetben. A tanulók legyenek tisztában a leggyakoribb biztonsági problémákkal, támadási módszerekkel, és tanulják meg, hogyan lehet ellenük védekezni, azokat megelőzni. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Képes a vezetékes és vezeték nélküli hálózatok összehasonlítására, előnyeinek és hátrányainak megállapítására.</li>
-          <li>Ismeri a vezeték nélküli LAN (WLAN) szabványokat, technológiákat. Tisztában van azzal, hogy mely 802.11 szabványok kompatibilisek egymással.</li>
-          <li>Tisztában van a rádiófrekvencia és a frekvenciacsatorna fogalmával, a 802.11 szabványok által használt rádiófrekvencia-sávval és -csatornákkal.</li>
-          <li>Tudja, hogy milyen összetevők szükségesek vezeték nélküli hálózat kialakításához (vezeték nélküli hálózati kártya, vezeték nélküli hozzáférési pont, vezeték nélküli forgalomirányító), és tisztában van ezek feladatával.</li>
-          <li>Ismeri a vezeték nélküli hálózatok esetén használatos topológiákat (ad hoc mód, infrastruktúra mód).</li>
-          <li>Ismeri a vezeték nélküli hálózat működései elvét, tisztában van a CSMA/CA közeghozzáférés-vezérléssel.</li>
-          <li>Ismeri a legfontosabb menedzsmentkeretek és vezérlőkeretek feladatát (beacon frame, association request frame, authentication frame, RTS, CTS).</li>
-          <li>Tisztában van a vezeték nélküli kliens és az AP társítási folyamatának lépéseivel.</li>
-          <li>Képes otthoni, vezeték nélküli hálózat kialakítására, konfigurálására. Képes vezeték nélküli kliens eszközökkel vezeték nélküli hálózathoz csatlakozni.</li>
-          <li>Ismeri a leggyakoribb vezeték nélküli támadási módokat (DOS-támadások, hamis AP-k, közbeékelődéses támadás).</li>
-          <li>Ismeri a vezeték nélküli hitelesítési módokat, és képes azok konfigurálására, használatára.</li>
-          <li>Képes vezeték nélküli forgalomirányító konfigurálására (például: DHCPkiszolgáló, SSID, hitelesítés, MAC-cím-szűrés, porttovábbítás, távoli felügyelet, adminisztrátori jelszó).</li>
-          <li>Képes vezeték nélküli forgalomirányítót az internethez csatlakoztatni, megfelelő IP-címzést konfigurálni.</li>
-          <li>Ismeri a nagyvállalati, vezeték nélküli hálózati megoldások során használt eszközöket (Wireless LAN Controller, Lightweight Access Point).</li>
-          <li>Tisztában van a CAPWAP-protokoll működésével.</li>
-          <li>Képes WLC-hez csatlakozni és annak GUI-felületét használni. Képes WLC-n a legalapvetőbb beállítások elvégzésére (WLAN létrehozása, beállításai, APcsoportok kezelése).</li>
-          <li>Képes a vezeték nélküli hálózatokban előforduló leggyakoribb hibák felismerésére és elhárítására.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a vezetékes és vezeték nélküli hálózatok összehasonlítására, előnyeinek és hátrányainak megállapítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a vezeték nélküli LAN (WLAN) szabványokat, technológiákat. Tisztában van azzal, hogy mely 802.11 szabványok kompatibilisek egymással.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a rádiófrekvencia és a frekvenciacsatorna fogalmával, a 802.11 szabványok által használt rádiófrekvencia-sávval és -csatornákkal.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tudja, hogy milyen összetevők szükségesek vezeték nélküli hálózat kialakításához (vezeték nélküli hálózati kártya, vezeték nélküli hozzáférési pont, vezeték nélküli forgalomirányító), és tisztában van ezek feladatával.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a vezeték nélküli hálózatok esetén használatos topológiákat (ad hoc mód, infrastruktúra mód).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a vezeték nélküli hálózat működései elvét, tisztában van a CSMA/CA közeghozzáférés-vezérléssel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a legfontosabb menedzsmentkeretek és vezérlőkeretek feladatát (beacon frame, association request frame, authentication frame, RTS, CTS).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a vezeték nélküli kliens és az AP társítási folyamatának lépéseivel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes otthoni, vezeték nélküli hálózat kialakítására, konfigurálására. Képes vezeték nélküli kliens eszközökkel vezeték nélküli hálózathoz csatlakozni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a leggyakoribb vezeték nélküli támadási módokat (DOS-támadások, hamis AP-k, közbeékelődéses támadás).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a vezeték nélküli hitelesítési módokat, és képes azok konfigurálására, használatára.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes vezeték nélküli forgalomirányító konfigurálására (például: DHCPkiszolgáló, SSID, hitelesítés, MAC-cím-szűrés, porttovábbítás, távoli felügyelet, adminisztrátori jelszó).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes vezeték nélküli forgalomirányítót az internethez csatlakoztatni, megfelelő IP-címzést konfigurálni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a nagyvállalati, vezeték nélküli hálózati megoldások során használt eszközöket (Wireless LAN Controller, Lightweight Access Point).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a CAPWAP-protokoll működésével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes WLC-hez csatlakozni és annak GUI-felületét használni. Képes WLC-n a legalapvetőbb beállítások elvégzésére (WLAN létrehozása, beállításai, APcsoportok kezelése).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a vezeték nélküli hálózatokban előforduló leggyakoribb hibák felismerésére és elhárítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
