--- a/ptthalo/halo23.html
+++ b/ptthalo/halo23.html
@@ -7,6 +7,7 @@
 
     <title>Hálózatok II.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,31 +41,157 @@
         <h1>Hozzáférési listák használata (5+20 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megértsék a forgalomszűrés jelentőségét, és legyenek képesek forgalomszűrést megvalósítani IPv4-környezetben. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Tisztában van a forgalomszűrés szükségességével, és meg is tudja azt valósítani hozzáférési listák alkalmazásával.</li>
-          <li>Érti a hozzáférési listák használatának célját és működését.</li>
-          <li>Tisztában van a helyettesítő maszk szerepével a hozzáférési listák vonatkozásában, és képes a helyes helyettesítő maszk meghatározására.</li>
-          <li>Ismeri a normál hozzáférési lista nyújtotta forgalomszűrési lehetőségeket.</li>
-          <li>Képes meghatározni a normál hozzáférési lista alkalmazásának legmegfelelőbb helyét.</li>
-          <li>Képes számozott és nevesített normál hozzáférési listát készíteni IPv4- környezetben.</li>
-          <li>Képes nevesített normál hozzáférési lista szerkesztésére, módosítására.</li>
-          <li>Képes ellenőrizni a normál hozzáférési lista működését, az átengedett és eldobott csomagok számát.</li>
-          <li>Képes normál hozzáférési listákon hibakeresést és hibaelhárítást végezni.</li>
-          <li>Ismeri a kiterjesztett hozzáférési lista nyújtotta forgalomszűrési lehetőségeket.</li>
-          <li>Képes meghatározni a kiterjesztett hozzáférési lista alkalmazásának legmegfelelőbb helyét.</li>
-          <li>Képes számozott és nevesített kiterjesztett hozzáférési listát készíteni IPv4 környezetben.</li>
-          <li>Képes nevesített kiterjesztett hozzáférési lista szerkesztésére, módosítására.</li>
-          <li>Képes ellenőrizni a kiterjesztett hozzáférési lista működését, az átengedett és eldobott csomagok számát.</li>
-          <li>Képes kiterjesztett hozzáférési listákon hibakeresést és hibaelhárítást végezni.</li>
-          <li>Tisztában van a távoli elérést biztosító VTY-vonalak védelmének jelentőségével.</li>
-          <li>Képes normál és kiterjesztett hozzáférési lista segítségével a VTY-vonalak védelmére.</li>
-          <li>Képes a VTY-vonalakra alkalmazott normál, illetve kiterjesztett hozzáférési lista működésének ellenőrzésére és hibaelhárítására.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a forgalomszűrés szükségességével, és meg is tudja azt valósítani hozzáférési listák alkalmazásával.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Érti a hozzáférési listák használatának célját és működését.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a helyettesítő maszk szerepével a hozzáférési listák vonatkozásában, és képes a helyes helyettesítő maszk meghatározására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a normál hozzáférési lista nyújtotta forgalomszűrési lehetőségeket.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes meghatározni a normál hozzáférési lista alkalmazásának legmegfelelőbb helyét.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes számozott és nevesített normál hozzáférési listát készíteni IPv4- környezetben.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes nevesített normál hozzáférési lista szerkesztésére, módosítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes ellenőrizni a normál hozzáférési lista működését, az átengedett és eldobott csomagok számát.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes normál hozzáférési listákon hibakeresést és hibaelhárítást végezni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a kiterjesztett hozzáférési lista nyújtotta forgalomszűrési lehetőségeket.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes meghatározni a kiterjesztett hozzáférési lista alkalmazásának legmegfelelőbb helyét.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes számozott és nevesített kiterjesztett hozzáférési listát készíteni IPv4 környezetben.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes nevesített kiterjesztett hozzáférési lista szerkesztésére, módosítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes ellenőrizni a kiterjesztett hozzáférési lista működését, az átengedett és eldobott csomagok számát.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes kiterjesztett hozzáférési listákon hibakeresést és hibaelhárítást végezni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a távoli elérést biztosító VTY-vonalak védelmének jelentőségével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes normál és kiterjesztett hozzáférési lista segítségével a VTY-vonalak védelmére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a VTY-vonalakra alkalmazott normál, illetve kiterjesztett hozzáférési lista működésének ellenőrzésére és hibaelhárítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
