--- a/ptthalo/halo24.html
+++ b/ptthalo/halo24.html
@@ -7,6 +7,7 @@
 
     <title>Hálózatok II.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,11 +56,21 @@
           <li>Képes a címfordítási tábla (NAT-tábla) megjelenítésére, ellenőrzésére, kiürítésére. Érti a NAT-táblában szereplő bejegyzéseket.</li>
           <li>Szimulációs szoftver segítségével végig tudja kísérni egy címfordítást használó adatcsomag harmadik rétegbeli fejlécének változását.</li>
         </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn"></button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
