--- a/ptthalo/halo29.html
+++ b/ptthalo/halo29.html
@@ -7,6 +7,7 @@
 
     <title>Hálózatok II.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,20 +41,69 @@
         <h1>Hálózatvirtualizáció, hálózatautomatizáció (5+19 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék a hálózatvirtualizáció és -automatizáció alapjait, előnyeit. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Tisztában van a cloud computing és a virtualizáció fontosságával, jelentőségével.</li>
-          <li>Ismeri a hálózati eszközök és a hálózat virtualizálásának lehetőségeit.</li>
-          <li>Ismeri a szoftveralapú hálózati megoldásokat.</li>
-          <li>Ismeri a hálózatautomatizáció alapjait.</li>
-          <li>Ismeri a használható adatformátumokat (JSON, YAML, XML), és képes ezek összehasonlítására.</li>
-          <li>Tisztában van az API- és a REST-szoftverarchitektúra működésével.</li>
-          <li>Ismeri a különböző konfigurációs menedzsmenteszközöket (Puppet, Chef, Ansible, SaltStack).</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a cloud computing és a virtualizáció fontosságával, jelentőségével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a hálózati eszközök és a hálózat virtualizálásának lehetőségeit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a szoftveralapú hálózati megoldásokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a hálózatautomatizáció alapjait.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a használható adatformátumokat (JSON, YAML, XML), és képes ezek összehasonlítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van az API- és a REST-szoftverarchitektúra működésével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a különböző konfigurációs menedzsmenteszközöket (Puppet, Chef, Ansible, SaltStack).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
