--- a/ptthalo/halo11.html
+++ b/ptthalo/halo11.html
@@ -7,6 +7,7 @@
 
     <title>Hálózatok I.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,23 +41,93 @@
         <h1>Hálózati eszközök alapszintű konfigurációja (5+11 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók képesek legyenek hálózati eszközökkel sávon kívüli és sávon belüli kapcsolatot létesíteni, és kapcsolók, illetve forgalomirányítók alapszintű konfigurációját elvégezni. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Képes konzolkapcsolatot kialakítani számítógép és hálózati eszköz (kapcsoló, forgalomirányító) között. Ismer legalább egy terminálemulációs szoftvert, és képes annak használatával a hálózati eszköz konfigurációs felületéhez hozzáférni.</li>
-          <li>Tisztában van a kapcsoló kezdeti konfigurációját megvalósító parancsokkal, és képes ezen parancsok használatára. Képes a kapcsoló alapszintű konfigurációját elvégezni (eszköznév beállítása, privilegizált mód és vonali jelszavak beállítása, bejelentkezési és nap üzenetének beállítása, parancselőzmények számának korlátozása).</li>
-          <li>Képes kapcsolón felügyeleti IP-cím és alapértelmezett átjáró beállítására.</li>
-          <li>Képes kapcsolón telnet és SSH-kapcsolat konfigurálására. Tisztában van a telnet és az SSH-protokollok közötti különbséggel. Adatforgalom elfogására alkalmas szoftver használatával képes telnet forgalom elfogására és az elfogott csomagok elemzésére.</li>
-          <li>Tisztában van a forgalomirányító kezdeti konfigurációját megvalósító parancsokkal, és képes ezen parancsok használatára.</li>
-          <li>Képes forgalomirányító interfészeinek konfigurálására (IP-cím és alhálózati maszk beállítása, leírás megadása, interfész engedélyezése és tiltása).</li>
-          <li>Képes forgalomirányító tábla megjelenítésére, és tudja értelmezni a közvetlenül csatlakozó hálózatokat jelölő sorokat.</li>
-          <li>Képes végberendezéseket csatlakoztatni a hálózati eszközökhöz, és képes azok IP-konfigurációját elvégezni.</li>
-          <li>Képes ellenőrizni a közvetlenül csatlakozó hálózatok elérhetőségét.</li>
-          <li>Képes hibaelhárítást végezni nem megfelelően működő, közvetlenül csatlakozó hálózatok között. Észreveszi a hálózatelérési hibát okozó téves konfigurációt, és képes annak korrigálására.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes konzolkapcsolatot kialakítani számítógép és hálózati eszköz (kapcsoló, forgalomirányító) között. Ismer legalább egy terminálemulációs szoftvert, és képes annak használatával a hálózati eszköz konfigurációs felületéhez hozzáférni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a kapcsoló kezdeti konfigurációját megvalósító parancsokkal, és képes ezen parancsok használatára. Képes a kapcsoló alapszintű konfigurációját elvégezni (eszköznév beállítása, privilegizált mód és vonali jelszavak beállítása, bejelentkezési és nap üzenetének beállítása, parancselőzmények számának korlátozása).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes kapcsolón felügyeleti IP-cím és alapértelmezett átjáró beállítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes kapcsolón telnet és SSH-kapcsolat konfigurálására. Tisztában van a telnet és az SSH-protokollok közötti különbséggel. Adatforgalom elfogására alkalmas szoftver használatával képes telnet forgalom elfogására és az elfogott csomagok elemzésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a forgalomirányító kezdeti konfigurációját megvalósító parancsokkal, és képes ezen parancsok használatára.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes forgalomirányító interfészeinek konfigurálására (IP-cím és alhálózati maszk beállítása, leírás megadása, interfész engedélyezése és tiltása).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes forgalomirányító tábla megjelenítésére, és tudja értelmezni a közvetlenül csatlakozó hálózatokat jelölő sorokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes végberendezéseket csatlakoztatni a hálózati eszközökhöz, és képes azok IP-konfigurációját elvégezni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes ellenőrizni a közvetlenül csatlakozó hálózatok elérhetőségét.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes hibaelhárítást végezni nem megfelelően működő, közvetlenül csatlakozó hálózatok között. Észreveszi a hálózatelérési hibát okozó téves konfigurációt, és képes annak korrigálására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
