--- a/ptthalo/halo110.html
+++ b/ptthalo/halo110.html
@@ -7,6 +7,7 @@
 
     <title>Hálózatok I.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,24 +41,101 @@
         <h1>Forgalomirányítási alapok, statikus forgalomirányítás (5+35 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók szerezzenek forgalomirányítási alapismereteket, tudják értelmezni az irányítótábla bejegyzéseit IPv4- és IPv6-környezetben. A tanulók ismerjék meg a statikus forgalomirányítás lehetőségeit, működését, és legyenek képesek kisebb hálózatban statikus forgalomirányítást konfigurálni. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Tisztában van az irányítótábla szerepével, az irányítótáblában található sorok felépítésével IPv4- és IPv6-környezetben.</li>
-          <li>Képes a forgalomirányító IPv4- és IPv6-irányítótábláját megjeleníteni, a benne található sorokat értelmezni.</li>
-          <li>Képes IPv4- és IPv6-irányítótábla alapján a forgalomirányító döntési folyamatát ismertetni.</li>
-          <li>Tisztában van a statikus forgalomirányítás szerepével, megvalósításának lehetőségével.</li>
-          <li>Ismeri a statikus forgalomirányítás előnyeit és hátrányait.</li>
-          <li>Ismeri a statikus útvonalak megadási módjait (teljesen meghatározott, kimenő interfészt használó, következő ugrás címét használó útvonalak).</li>
-          <li>Ismeri a statikusan létrehozott útvonalak fajtáit, és tisztában van ezek szerepével (alapértelmezett statikus útvonal, lebegő statikus útvonal, hagyományos statikus útvonal, összevont statikus útvonal).</li>
-          <li>Képes kis méretű hierarchikus hálózatban hatékony IPv4 és IPv6 statikus forgalomirányítást tervezni, megvalósítani.</li>
-          <li>Képes IPv4 és IPv6 alapértelmezett statikus útvonalat konfigurálni.</li>
-          <li>Képes hagyományos és lebegő statikus útvonalakat létrehozni IPv4 és IPv6 környezetben. Ismeri a lebegő statikus útvonal szerepét, tisztában van annak használatával.</li>
-          <li>Képes IPv4-és IPv6-környezetben útvonalösszevonást meghatározni, és ennek megfelelően összevont statikus útvonalat konfigurálni.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van az irányítótábla szerepével, az irányítótáblában található sorok felépítésével IPv4- és IPv6-környezetben.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a forgalomirányító IPv4- és IPv6-irányítótábláját megjeleníteni, a benne található sorokat értelmezni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes IPv4- és IPv6-irányítótábla alapján a forgalomirányító döntési folyamatát ismertetni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a statikus forgalomirányítás szerepével, megvalósításának lehetőségével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a statikus forgalomirányítás előnyeit és hátrányait.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a statikus útvonalak megadási módjait (teljesen meghatározott, kimenő interfészt használó, következő ugrás címét használó útvonalak).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a statikusan létrehozott útvonalak fajtáit, és tisztában van ezek szerepével (alapértelmezett statikus útvonal, lebegő statikus útvonal, hagyományos statikus útvonal, összevont statikus útvonal).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes kis méretű hierarchikus hálózatban hatékony IPv4 és IPv6 statikus forgalomirányítást tervezni, megvalósítani.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes IPv4 és IPv6 alapértelmezett statikus útvonalat konfigurálni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes hagyományos és lebegő statikus útvonalakat létrehozni IPv4 és IPv6 környezetben. Ismeri a lebegő statikus útvonal szerepét, tisztában van annak használatával.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes IPv4-és IPv6-környezetben útvonalösszevonást meghatározni, és ennek megfelelően összevont statikus útvonalat konfigurálni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
