--- a/ptthalo/halo12.html
+++ b/ptthalo/halo12.html
@@ -7,6 +7,7 @@
 
     <title>Hálózatok I.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,17 +41,45 @@
         <h1>Kapcsolási alapok (3+7 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék a kapcsoló működését, a kapcsolási módokat. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Tisztában van a második rétegbeli kerettovábbítás folyamatával. Tudja, hogy a kapcsoló esetében mire szolgál a MAC-tábla. Ismeri a MAC-tábla felépítésének folyamatát, és használatának módját. Képes a kapcsoló MAC-tábláját megjeleníteni, kiüríteni.</li>
-          <li>Adatforgalom elfogására alkalmas szoftver vagy szimulációs szoftver használatával képes a kapcsoló MAC-táblájának felépítését nyomon követni.</li>
-          <li>Ismeri a kapcsolási módokat (töredékmentes továbbítás, gyorstovábbítás, tárol-éstovábbít módszer), és képes azok összehasonlítására.</li>
-          <li>Tisztában van az ütközési tartomány és a szórási tartomány fogalmával. Képes az ütközési és a szórási tartomány összehasonlítására és megkülönböztetésére. Adott topológián képes az ütközési és a szórási tartományok megállapítására.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a második rétegbeli kerettovábbítás folyamatával. Tudja, hogy a kapcsoló esetében mire szolgál a MAC-tábla. Ismeri a MAC-tábla felépítésének folyamatát, és használatának módját. Képes a kapcsoló MAC-tábláját megjeleníteni, kiüríteni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Adatforgalom elfogására alkalmas szoftver vagy szimulációs szoftver használatával képes a kapcsoló MAC-táblájának felépítését nyomon követni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a kapcsolási módokat (töredékmentes továbbítás, gyorstovábbítás, tárol-éstovábbít módszer), és képes azok összehasonlítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van az ütközési tartomány és a szórási tartomány fogalmával. Képes az ütközési és a szórási tartomány összehasonlítására és megkülönböztetésére. Adott topológián képes az ütközési és a szórási tartományok megállapítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
