--- a/ptthalo/halo13.html
+++ b/ptthalo/halo13.html
@@ -7,6 +7,7 @@
 
     <title>Hálózatok I.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,32 +41,165 @@
         <h1>VLAN-ok használata, VLAN-ok közti forgalomirányítás (13+31 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók ismerjék meg a VLAN-ok szerepét, legyenek képesek VLAN-ok kialakítására, és legyenek tisztában a trönk kapcsolatok szerepével. A tanulók ismerkedjenek meg a VLAN-ok közti forgalomirányítás lehetőségeivel, és legyenek képesek VLAN-ok közti forgalomirányítást megvalósítani. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Tisztában van a VLAN-ok szerepével, jelentőségével. Érti a VLAN-ok használatának célját.</li>
-          <li>Ismeri a VLAN-ok fontosabb típusait: adat, hang, felügyeleti és natív VLAN, és tisztában van a VLAN-ok megvalósításának módjaival.</li>
-          <li>Tisztában van a VLAN ID fogalmával, szerepével. Ismeri a normál és kiterjesztett VLAN létrehozására használható VLAN ID-tartományt. Érti a normál és a kiterjesztett VLAN közötti különbségeket.</li>
-          <li>Képes VLAN-ok létrehozására, törlésére, módosítására.</li>
-          <li>Tisztában van a kapcsoló portjainak lehetséges működési módjaival (hozzáférési, trönk), érti a két működési mód közötti különbséget. Adott topológián önállóan meg tudja határozni, hogy a szereplő kapcsolóportoknak melyik módban kellene működniük.</li>
-          <li>Képes a kapcsoló portjait hozzáférési módúra konfigurálni és VLAN-hoz rendelni.</li>
-          <li>Képes a kapcsoló portjait trönk módúra konfigurálni, azon a natív és az átengedett VLAN-okat beállítani.</li>
-          <li>Ismeri a 802.1q protokollt, és adatforgalom elfogására alkalmas szoftverrel vagy szimulációs szoftverrel képes 802.1q keret elemzésére.</li>
-          <li>Képes egy adott kapcsolón a hozzáférési portként működő portok és a hozzájuk rendelt VLAN-ok megjelenítésére. Képes egy kapcsolón a trönkként működő portok megjelenítésére. Képes arra, hogy egy kapcsoló portján ellenőrizze a működési módot (hozzáférési, trönk).</li>
-          <li>Képes a hozzáférési és a trönk portok hibaelhárítására.</li>
-          <li>Ismeri a VTP-protokollt, tisztában van a VTP-protokoll használatával. Érti a VTPmódok (kliens, szerver, transzparens) feladatát, működését.</li>
-          <li>Képes VTP-t konfigurálni kapcsolók közé.</li>
-          <li>Képes a VTP-protokoll hibafelderítésére és elhárítására.</li>
-          <li>Képes többkapcsolós hálózatban VLAN-ok kialakítására.</li>
-          <li>Képes VLAN-ok között hagyományos forgalomirányítás megvalósítására.</li>
-          <li>Képes VLAN-ok között "router-on-a-stick" forgalomirányítás megvalósítására.</li>
-          <li>Képes többrétegű kapcsolón routed port konfigurálására. Képes VLAN-ok közötti hagyományos forgalomirányítás megvalósítására többrétegű kapcsolóval.</li>
-          <li>Képes többrétegű kapcsolón VLAN-ok létrehozására, SVI-interfészeken IP-cím beállítására, fizikai porton trönk működési mód beállítására. Képes többrétegű kapcsolón trönk port és SVI-interfészek használatával VLAN-ok közti forgalomirányítás konfigurálására.</li>
-          <li>Képes VLAN-ok közötti forgalomirányítás hibakeresésére és -elhárítására.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a VLAN-ok szerepével, jelentőségével. Érti a VLAN-ok használatának célját.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a VLAN-ok fontosabb típusait: adat, hang, felügyeleti és natív VLAN, és tisztában van a VLAN-ok megvalósításának módjaival.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a VLAN ID fogalmával, szerepével. Ismeri a normál és kiterjesztett VLAN létrehozására használható VLAN ID-tartományt. Érti a normál és a kiterjesztett VLAN közötti különbségeket.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes VLAN-ok létrehozására, törlésére, módosítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a kapcsoló portjainak lehetséges működési módjaival (hozzáférési, trönk), érti a két működési mód közötti különbséget. Adott topológián önállóan meg tudja határozni, hogy a szereplő kapcsolóportoknak melyik módban kellene működniük.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a kapcsoló portjait hozzáférési módúra konfigurálni és VLAN-hoz rendelni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a kapcsoló portjait trönk módúra konfigurálni, azon a natív és az átengedett VLAN-okat beállítani.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a 802.1q protokollt, és adatforgalom elfogására alkalmas szoftverrel vagy szimulációs szoftverrel képes 802.1q keret elemzésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes egy adott kapcsolón a hozzáférési portként működő portok és a hozzájuk rendelt VLAN-ok megjelenítésére. Képes egy kapcsolón a trönkként működő portok megjelenítésére. Képes arra, hogy egy kapcsoló portján ellenőrizze a működési módot (hozzáférési, trönk).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a hozzáférési és a trönk portok hibaelhárítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a VTP-protokollt, tisztában van a VTP-protokoll használatával. Érti a VTPmódok (kliens, szerver, transzparens) feladatát, működését.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes VTP-t konfigurálni kapcsolók közé.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a VTP-protokoll hibafelderítésére és elhárítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes többkapcsolós hálózatban VLAN-ok kialakítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes VLAN-ok között hagyományos forgalomirányítás megvalósítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes VLAN-ok között "router-on-a-stick" forgalomirányítás megvalósítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes többrétegű kapcsolón routed port konfigurálására. Képes VLAN-ok közötti hagyományos forgalomirányítás megvalósítására többrétegű kapcsolóval.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes többrétegű kapcsolón VLAN-ok létrehozására, SVI-interfészeken IP-cím beállítására, fizikai porton trönk működési mód beállítására. Képes többrétegű kapcsolón trönk port és SVI-interfészek használatával VLAN-ok közti forgalomirányítás konfigurálására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes VLAN-ok közötti forgalomirányítás hibakeresésére és -elhárítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
