--- a/ptthalo/halo18.html
+++ b/ptthalo/halo18.html
@@ -7,6 +7,7 @@
 
     <title>Hálózatok I.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,32 +43,132 @@
         <p>A témakör célja, hogy a tanulók megismerjék a leggyakoribb biztonsági problémákat és támadási típusokat LAN-környezetben, és megtanulják, hogyan lehet ellenük védekezni, illetve megelőzni őket.</p>
         <p>A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
-          <li>Érti az alapvető biztonsági beállítások szükségességét a hálózati eszközökön.
+          <li>
           </li>
-          <li>Ismeri a LAN-okban előforduló leggyakoribb biztonsági problémákat, támadási lehetőségeket (MAC-cím-elárasztás, ARP-támadás, DHCP-kiéheztetés és -hamisítás,
-            Telnet-támadások, Brute force-jelszó-támadás).</li>
-          <li>Tisztában van a leggyakrabban használt biztonsági módszerek szerepével, működési elvével.</li>
-          <li>Érti a MAC-cím-elárasztásos támadás folyamatát és az általa okozott működési
-            problémákat.</li>
-          <li>Tisztában van a portbiztonság működésével, és használatának lehetőségeivel. Érti a
-            portbiztonság megsértésével kiváltott állapotok közti különbségeket</li>
-          <li>Képes kapcsolón portbiztonság konfigurálására.</li>
-          <li>Képes ellenőrizni a portbiztonsággal konfigurált kapcsolóportok állapotát, és képes
-            a lekapcsolt portok helyreállítására.</li>
-          <li>Ismeri a DHCP-snooping-technikát, annak működését. Tisztában van a megbízható
-            és nem megbízható port fogalmával.</li>
-          <li>Képes kapcsolón DHCP-snooping konfigurálására.</li>
-          <li>Tudja, mi célt szolgál a DHCP 82-es opciója, és képes ennek használatát engedélyezni, illetve tiltani.</li>
-          <li>Képes ARP-inspection (DAI)konfigurálásra az ARP-támadások megelőzésére.</li>
-          <li>Képes kapcsoló és forgalomirányító távoli elérését SSH-protokoll használatával
-            biztosítani.</li>
-          <li>Képes az SSH-elérés során fellépő hibák felismerésére és elhárítására.</li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
         </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Érti az alapvető biztonsági beállítások szükségességét a hálózati eszközökön.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a LAN-okban előforduló leggyakoribb biztonsági problémákat, támadási lehetőségeket (MAC-cím-elárasztás, ARP-támadás, DHCP-kiéheztetés és -hamisítás, Telnet-támadások, Brute force-jelszó-támadás).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a leggyakrabban használt biztonsági módszerek szerepével, működési elvével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Érti a MAC-cím-elárasztásos támadás folyamatát és az általa okozott működési problémákat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a portbiztonság működésével, és használatának lehetőségeivel. Érti a portbiztonság megsértésével kiváltott állapotok közti különbségeket.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes kapcsolón portbiztonság konfigurálására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes ellenőrizni a portbiztonsággal konfigurált kapcsolóportok állapotát, és képes a lekapcsolt portok helyreállítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a DHCP-snooping-technikát, annak működését. Tisztában van a megbízható és nem megbízható port fogalmával.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes kapcsolón DHCP-snooping konfigurálására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tudja, mi célt szolgál a DHCP 82-es opciója, és képes ennek használatát engedélyezni, illetve tiltani.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes ARP-inspection (DAI)konfigurálásra az ARP-támadások megelőzésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes kapcsoló és forgalomirányító távoli elérését SSH-protokoll használatával biztosítani.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes az SSH-elérés során fellépő hibák felismerésére és elhárítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
