--- a/ptthalo/halo21.html
+++ b/ptthalo/halo21.html
@@ -7,6 +7,7 @@
 
     <title>Hálózatok II.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,32 +41,165 @@
         <h1>Dinamikus forgalomirányítási ismeretek (15+30 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék a dinamikus belső forgalomirányítás lehetőségeit, a forgalomirányító protokollok működését, és megértsék a forgalomirányító protokollok közt lévő különbségeket. Képesek legyenek a hálózat méreteinek megfelelő forgalomirányítás megtervezésére, a protokoll kiválasztására, konfigurálására, hibaelhárítására. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Látja a statikus és dinamikus forgalomirányítás közti különbséget, mindkét esetben tisztában van az előnyökkel és a hátrányokkal.</li>
-          <li>Tisztában van a dinamikus belső forgalomirányító protokollok működési elvével. Képes a dinamikus forgalomirányító protokollok csoportosítására osztályosság (osztály nélküli, osztályalapú), a felhasználás helye (külső, belső), működési mód (távolságvektor-alapú, kapcsolatállapot-alapú) szerint.</li>
-          <li>Ismer legalább egy távolságvektor-alapú dinamikus forgalomirányító protokollt (pl. RIP, RIPv2, EIGRP), és tisztában van a működésével. Képes az általa ismert távolságvektor-alapú forgalomirányító protokoll konfigurálására, működésének ellenőrzésére, hibaelhárítására.</li>
-          <li>Tisztában van a távolságvektor-alapú és a kapcsolatállapot-alapú forgalomirányító protokollok közti különbségekkel. Ismeri a kapcsolatállapot-alapú forgalomirányító protokollok működési elvét.</li>
-          <li>Ismeri az OSPFv2 és OSPFv3 forgalomirányító protokollok működését, a forgalomirányítók közötti szomszédság kialakulásának feltételeit és folyamatát.</li>
-          <li>Ismeri az OSPF által használt üzenettípusokat (Hello, DBD, LSR, LSU, LSAck) és azok szerepét.</li>
-          <li>Tisztában van a hello és a halott időzítők szerepével, és képes azok értékét megváltoztatni.</li>
-          <li>Ismeri az OSPF-hálózattípusokat (pont-pont, szórásos többes hozzáférés, nem szórásos többes hozzáférés, pont-többpont, virtuális összeköttetés), és tisztában van a többes hozzáférésű hálózatok kihívásaival (többszörös hozzáférési viszonyok, túlzott LSA-elárasztás).</li>
-          <li>Tisztában van a router ID, a DR és a BDR fogalmával és szükségességével a többes hozzáférésű hálózatokban.</li>
-          <li>Ismeri a router ID megválasztásának folyamatát, és képes a router ID értékét beállítani, illetve ennek hiányában meghatározni.</li>
-          <li>Ismeri a DR/BDR-választás folyamatát, és képes azt befolyásolni interfészprioritás, illetve router ID módosításával.</li>
-          <li>Ismeri a passzív interfészek szerepét, és képes megállapítani, hogy egy forgalomirányító mely interfészét kell passzívként konfigurálni. Képes OSPFv2 és OSPFv3 esetén passzív interfész beállítására.</li>
-          <li>Képes alapértelmezett útvonal továbbhirdetésére egyterületű OSPFv2 és OSPFv3 esetén.</li>
-          <li>Képes egyterületű OSPFv2 és OSPFv3 konfigurálására, illetve már meglévő OSPFv2- és OSPFv3-terület kiegészítésére.</li>
-          <li>Képes hibaelhárítást végezni egyterületű OSPFv2 és OSPFv3 esetén, ismeri a hibaelhárítás során használatos legfontosabb parancsokat.</li>
-          <li>Tisztában van az OSPF-területek jelentőségével, a többterületű OSPFv2 és OSPFv3 működésével.</li>
-          <li>Képes többterületű OSPFv2 és OSPFv3 konfigurálására, illetve már meglévő konfiguráció kiegészítésére, módosítására.</li>
-          <li>Képes alapértelmezett útvonalat behirdetni többterületű OSPFv2 és OSPFv3 hálózatokba.</li>
-          <li>Képes többterületű OSPFv2 és OSPFv3 működésének ellenőrzésére, hibaelhárítására.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Látja a statikus és dinamikus forgalomirányítás közti különbséget, mindkét esetben tisztában van az előnyökkel és a hátrányokkal.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a dinamikus belső forgalomirányító protokollok működési elvével. Képes a dinamikus forgalomirányító protokollok csoportosítására osztályosság (osztály nélküli, osztályalapú), a felhasználás helye (külső, belső), működési mód (távolságvektor-alapú, kapcsolatállapot-alapú) szerint.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismer legalább egy távolságvektor-alapú dinamikus forgalomirányító protokollt (pl. RIP, RIPv2, EIGRP), és tisztában van a működésével. Képes az általa ismert távolságvektor-alapú forgalomirányító protokoll konfigurálására, működésének ellenőrzésére, hibaelhárítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a távolságvektor-alapú és a kapcsolatállapot-alapú forgalomirányító protokollok közti különbségekkel. Ismeri a kapcsolatállapot-alapú forgalomirányító protokollok működési elvét.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az OSPFv2 és OSPFv3 forgalomirányító protokollok működését, a forgalomirányítók közötti szomszédság kialakulásának feltételeit és folyamatát.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az OSPF által használt üzenettípusokat (Hello, DBD, LSR, LSU, LSAck) és azok szerepét.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a hello és a halott időzítők szerepével, és képes azok értékét megváltoztatni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az OSPF-hálózattípusokat (pont-pont, szórásos többes hozzáférés, nem szórásos többes hozzáférés, pont-többpont, virtuális összeköttetés), és tisztában van a többes hozzáférésű hálózatok kihívásaival (többszörös hozzáférési viszonyok, túlzott LSA-elárasztás).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a router ID, a DR és a BDR fogalmával és szükségességével a többes hozzáférésű hálózatokban.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a router ID megválasztásának folyamatát, és képes a router ID értékét beállítani, illetve ennek hiányában meghatározni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a DR/BDR-választás folyamatát, és képes azt befolyásolni interfészprioritás, illetve router ID módosításával.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a passzív interfészek szerepét, és képes megállapítani, hogy egy forgalomirányító mely interfészét kell passzívként konfigurálni. Képes OSPFv2 és OSPFv3 esetén passzív interfész beállítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes alapértelmezett útvonal továbbhirdetésére egyterületű OSPFv2 és OSPFv3 esetén.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes egyterületű OSPFv2 és OSPFv3 konfigurálására, illetve már meglévő OSPFv2- és OSPFv3-terület kiegészítésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes hibaelhárítást végezni egyterületű OSPFv2 és OSPFv3 esetén, ismeri a hibaelhárítás során használatos legfontosabb parancsokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van az OSPF-területek jelentőségével, a többterületű OSPFv2 és OSPFv3 működésével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes többterületű OSPFv2 és OSPFv3 konfigurálására, illetve már meglévő konfiguráció kiegészítésére, módosítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes alapértelmezett útvonalat behirdetni többterületű OSPFv2 és OSPFv3 hálózatokba.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes többterületű OSPFv2 és OSPFv3 működésének ellenőrzésére, hibaelhárítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
