--- a/ptthalo/halo22.html
+++ b/ptthalo/halo22.html
@@ -7,6 +7,7 @@
 
     <title>Hálózatok II.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,38 +43,213 @@
         <h1>Hálózatbiztonság (15+30 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megértsék hálózatbiztonság fontosságát. Tisztában legyenek a támadási technikákkal, és képesek legyenek ezek lehetőség szerinti megelőzésére, kivédésére. A tanulók ismerjék meg a központi hitelesítés szerepét, használatának lehetőségeit, és legyenek képesek RADIUS-hitelesítés megvalósítására. A tanulók ismerjék meg a kriptográfia alapjait. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Tisztában van napjaink hálózati fenyegetéseivel, a CyberSecurity jelenlegi állapotával.</li>
-          <li>Ismeri a fenyegetés, sebezhetőség és kockázat fogalmát, a kockázatkezelés módszereit.</li>
-          <li>Tisztában van a hacker fogalmával, fajtáival, lehetséges indítékaival.</li>
-          <li>Ismeri az etikus hacker fogalmát és az etikus hacker által használt eszközöket (pl. jelszófeltörő programok, hálózatmonitorozó programok, csomagelfogó programok stb.)</li>
-          <li>Ismeri a malware fogalmát, fajtáit (vírus, féreg, trójai, spyware, adware, scareware, phishing, rootkits, ransomware). Érti az egyes fajták közti különbségeket.</li>
-          <li>Ismeri a hálózati támadások fontosabb típusait (felderítés, jogosultságmegszerzés, social engineering, szolgáltatásmegtagadás).</li>
-          <li>Ismeri az IP-, ICMP-, TCP-, UDP-, ARP-, DNS- és DHCP-protkollok sebezhetőségeit.</li>
-          <li>Ismeri a webes és levelezési szolgáltatások sebezhetőségeit.</li>
-          <li>Ismeri az adatbázisok elleni támadások lehetőségeit (pl. SQL-injection).</li>
-          <li>Képes egy kapcsolón a porttükrözés beállítására (SPAN), a hálózati forgalom megfigyelése céljából.</li>
-          <li>Tisztában van a hálózatbiztonsági házirend fontosságával. Tisztában van az egyes támadástípusok esetén használható megelőzési és hatástalanítási technikákkal.</li>
-          <li>Ismeri a forgalomirányító védelmének három területét (fizikai biztonság, az operációs rendszer biztonsága, router hardening).</li>
-          <li>Ismeri a forgalomirányítón létrehozható felhasználói szinteket, érti ezek működését, és képes forgalomirányítón különböző szintű felhasználókat létrehozni, hozzájuk jogosultságokat rendelni.</li>
-          <li>Tisztában van a role-based CLI-hozzáféréssel, a root view, a CLI-view és a superview fogalmával, működésével. Képes forgalomirányítón superview, root view és CLI-view létrehozására, működésének ellenőrzésére.</li>
-          <li>Tisztában van a szállítási réteg sebezhetőségével, ismeri a TCP- és UDP-protokoll elleni támadásokat.</li>
-          <li>Ismeri az AAA fogalmát, összetevőit.</li>
-          <li>Tisztában van a külső központi szerveren történő hitelesítés és hozzáférés-kezelés jelentőségével, fontosságával.</li>
-          <li>Tisztában van a RADIUS-protokoll működésével, szerepével.</li>
-          <li>Képes forgalomirányítón AAA megvalósítására, használatára. Képes forgalomirányító távoli eléréséhez RADIUS-hitelesítést használni.</li>
-          <li>Képes vezeték nélküli hálózatban RADIUS-hitelesítés konfigurálására, használatára.</li>
-          <li>Tisztában van a hitelesítés, sértetlenség és megbízhatóság (authentication, integrity, confidentiality) jelentésével, érti a köztük lévő különbségeket.</li>
-          <li>Érti a kriptográfia jelentőségét, ismer egyszerűbb titkosítási algoritmusokat (Vigenere-kódolás, Ceasar-kódolás).</li>
-          <li>Tisztában van a titkos kulcs és a nyilvános kulcs fogalmával.</li>
-          <li>Tisztában van a szimmetrikus kulcsú és az aszimmetrikus kulcsú titkosítás működési elvével. Ismer szimmetrikus kulcsú és aszimmetrikus kulcsú titkosítási eljárásokat (DES, AES, RSA).</li>
-          <li>Tisztában van a hash algoritmusok feladatával, ismeri a leginkább használt hashképző algoritmusokat (MD5, SHA).</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van napjaink hálózati fenyegetéseivel, a CyberSecurity jelenlegi állapotával.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a fenyegetés, sebezhetőség és kockázat fogalmát, a kockázatkezelés módszereit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a hacker fogalmával, fajtáival, lehetséges indítékaival.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az etikus hacker fogalmát és az etikus hacker által használt eszközöket (pl. jelszófeltörő programok, hálózatmonitorozó programok, csomagelfogó programok stb.)</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a malware fogalmát, fajtáit (vírus, féreg, trójai, spyware, adware, scareware, phishing, rootkits, ransomware). Érti az egyes fajták közti különbségeket.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a hálózati támadások fontosabb típusait (felderítés, jogosultságmegszerzés, social engineering, szolgáltatásmegtagadás).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az IP-, ICMP-, TCP-, UDP-, ARP-, DNS- és DHCP-protkollok sebezhetőségeit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a webes és levelezési szolgáltatások sebezhetőségeit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az adatbázisok elleni támadások lehetőségeit (pl. SQL-injection).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes egy kapcsolón a porttükrözés beállítására (SPAN), a hálózati forgalom megfigyelése céljából.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a hálózatbiztonsági házirend fontosságával. Tisztában van az egyes támadástípusok esetén használható megelőzési és hatástalanítási technikákkal.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a forgalomirányító védelmének három területét (fizikai biztonság, az operációs rendszer biztonsága, router hardening).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a forgalomirányítón létrehozható felhasználói szinteket, érti ezek működését, és képes forgalomirányítón különböző szintű felhasználókat létrehozni, hozzájuk jogosultságokat rendelni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a role-based CLI-hozzáféréssel, a root view, a CLI-view és a superview fogalmával, működésével. Képes forgalomirányítón superview, root view és CLI-view létrehozására, működésének ellenőrzésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a szállítási réteg sebezhetőségével, ismeri a TCP- és UDP-protokoll elleni támadásokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az AAA fogalmát, összetevőit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a külső központi szerveren történő hitelesítés és hozzáférés-kezelés jelentőségével, fontosságával.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a RADIUS-protokoll működésével, szerepével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes forgalomirányítón AAA megvalósítására, használatára. Képes forgalomirányító távoli eléréséhez RADIUS-hitelesítést használni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes vezeték nélküli hálózatban RADIUS-hitelesítés konfigurálására, használatára.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a hitelesítés, sértetlenség és megbízhatóság (authentication, integrity, confidentiality) jelentésével, érti a köztük lévő különbségeket.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Érti a kriptográfia jelentőségét, ismer egyszerűbb titkosítási algoritmusokat (Vigenere-kódolás, Ceasar-kódolás).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a titkos kulcs és a nyilvános kulcs fogalmával.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a szimmetrikus kulcsú és az aszimmetrikus kulcsú titkosítás működési elvével. Ismer szimmetrikus kulcsú és aszimmetrikus kulcsú titkosítási eljárásokat (DES, AES, RSA).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a hash algoritmusok feladatával, ismeri a leginkább használt hashképző algoritmusokat (MD5, SHA).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
