--- a/ptthalo/halo28.html
+++ b/ptthalo/halo28.html
@@ -7,6 +7,7 @@
 
     <title>Hálózatok II.</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,25 +41,109 @@
         <h1>Hálózattervezés, hibaelhárítás (5+18 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók elsajátítsák a hálózattervezés és a hálózati hibaelhárítás elméleti alapjait és gyakorlati megvalósításait. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Tisztában van a konvergált hálózat fogalmával, jelentőségével.</li>
-          <li>Ismeri a háromrétegű hierarchikus hálózati modellt (hozzáférési réteg, elosztási réteg, központi réteg), és tisztában van az egyes rétegek feladatával, ajánlott eszközeivel.</li>
-          <li>A háromrétegű modell használatával képes kis- és közepes méretű kapcsolt hálózat tervezésére.</li>
-          <li>Tisztában van a kapcsoló hardverjellemzőivel, a kapcsolók fajtáival (moduláris, fix kiépítésű, stackelhető), és képes a hálózat követelményeit figyelembe véve a megfelelő kapcsoló kiválasztására.</li>
-          <li>Tisztában van a forgalomirányító hardverjellemzőivel, és képes a hálózat követelményeit figyelembe véve a megfelelő kapcsoló kiválasztására.</li>
-          <li>Tisztában van a hálózati dokumentáció tartalmával, jelentőségével. Képes hálózati dokumentáció készítésére. Tudja, hogyan érdemes a hálózati dokumentációt felhasználni a hibakeresés során.</li>
-          <li>Tisztában van a hibaelhárítás folyamatával.</li>
-          <li>Ismeri az OSI-modell rétegein alapuló hibafelderítési eljárásokat (fentről lefelé, lentről felfelé, oszd-meg-és-uralkodj), és képes ezek alapján hibafelderítést végezni.</li>
-          <li>Ismeri a hibafelderítéshez használható hardveres és szoftveres eszközöket, és képes ezek használatára.</li>
-          <li>Képes a hálózati hibák tüneteinek, következményeinek és a hiba által érintett területnek a meghatározására.</li>
-          <li>Képes a hálózati hibák megfelelő dokumentálására.</li>
-          <li>Tisztában van a viszonyítási alap jelentőségével, tudja, hogyan és mikor érdemes viszonyítási alapot készíteni.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a konvergált hálózat fogalmával, jelentőségével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a háromrétegű hierarchikus hálózati modellt (hozzáférési réteg, elosztási réteg, központi réteg), és tisztában van az egyes rétegek feladatával, ajánlott eszközeivel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">A háromrétegű modell használatával képes kis- és közepes méretű kapcsolt hálózat tervezésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a kapcsoló hardverjellemzőivel, a kapcsolók fajtáival (moduláris, fix kiépítésű, stackelhető), és képes a hálózat követelményeit figyelembe véve a megfelelő kapcsoló kiválasztására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a forgalomirányító hardverjellemzőivel, és képes a hálózat követelményeit figyelembe véve a megfelelő kapcsoló kiválasztására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a hálózati dokumentáció tartalmával, jelentőségével. Képes hálózati dokumentáció készítésére. Tudja, hogyan érdemes a hálózati dokumentációt felhasználni a hibakeresés során.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a hibaelhárítás folyamatával.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az OSI-modell rétegein alapuló hibafelderítési eljárásokat (fentről lefelé, lentről felfelé, oszd-meg-és-uralkodj), és képes ezek alapján hibafelderítést végezni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a hibafelderítéshez használható hardveres és szoftveres eszközöket, és képes ezek használatára.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a hálózati hibák tüneteinek, következményeinek és a hiba által érintett területnek a meghatározására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a hálózati hibák megfelelő dokumentálására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a viszonyítási alap jelentőségével, tudja, hogyan és mikor érdemes viszonyítási alapot készíteni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
